--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -157,6 +157,8 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mainimgui.cpp" />
     <ClCompile Include="Mainopengl.cpp" />
+    <ClCompile Include="Particule.cpp" />
+    <ClCompile Include="Vecteur3D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -169,6 +171,9 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
+    <ClInclude Include="MoteurUtils.h" />
+    <ClInclude Include="Particule.h" />
+    <ClInclude Include="Vecteur3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
