Modif .h et .cpp

--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="Precision.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Timing.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
