--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="MoteurUtils.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="Timing.h" />
     <ClInclude Include="Vector3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
