--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -159,9 +159,23 @@
     <ClCompile Include="Mainimgui.cpp" />
     <ClCompile Include="Mainopengl.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleBuoyancy.cpp" />
+    <ClCompile Include="ParticleDrag.cpp" />
+    <ClCompile Include="ParticleForceGenerator.cpp" />
+    <ClCompile Include="ParticleForceRegistry.cpp" />
+    <ClCompile Include="ParticleGravity.cpp" />
+    <ClCompile Include="ParticleSpring.cpp" />
+    <ClCompile Include="PhysicWorld.cpp" />
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ParticleBuoyancy.h" />
+    <ClInclude Include="ParticleDrag.h" />
+    <ClInclude Include="ParticleForceGenerator.h" />
+    <ClInclude Include="ParticleForceRegistry.h" />
+    <ClInclude Include="ParticleGravity.h" />
+    <ClInclude Include="ParticleSpring.h" />
+    <ClInclude Include="PhysicWorld.h" />
     <ClInclude Include="Precision.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
