--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj
@@ -154,35 +154,47 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ballistic.cpp" />
-    <ClCompile Include="imgui\imgui.cpp" />
-    <ClCompile Include="imgui\imgui_demo.cpp" />
-    <ClCompile Include="imgui\imgui_draw.cpp" />
-    <ClCompile Include="imgui\imgui_impl_glfw.cpp" />
-    <ClCompile Include="imgui\imgui_tables.cpp" />
-    <ClCompile Include="imgui\imgui_widgets.cpp" />
-    <ClCompile Include="imgui_impl_opengl3.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Particle.cpp" />
-    <ClCompile Include="ParticleAnchoredSpring.cpp" />
-    <ClCompile Include="ParticleBuoyancy.cpp" />
-    <ClCompile Include="ParticleDrag.cpp" />
-    <ClCompile Include="ParticleForceGenerator.cpp" />
-    <ClCompile Include="ParticleForceRegistry.cpp" />
-    <ClCompile Include="ParticleGravity.cpp" />
-    <ClCompile Include="ParticleSpring.cpp" />
-    <ClCompile Include="Timing.cpp" />
-    <ClCompile Include="Vector3D.cpp" />
+    <ClCompile Include="Sources\Demos\ballistic.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleAnchoredSpring.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleBuoyancy.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleDrag.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleForceGenerator.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleForceRegistry.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleGravity.cpp" />
+    <ClCompile Include="Sources\Forces\ParticleSpring.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_demo.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_draw.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_impl_glfw.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_tables.cpp" />
+    <ClCompile Include="Sources\IMGUI\imgui_widgets.cpp" />
+    <ClCompile Include="Sources\Particles\Particle.cpp" />
+    <ClCompile Include="Sources\Utils\Timing.cpp" />
+    <ClCompile Include="Sources\Vector3D\Vector3D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ParticleAnchoredSpring.h" />
-    <ClInclude Include="ParticleBuoyancy.h" />
-    <ClInclude Include="ParticleDrag.h" />
-    <ClInclude Include="ParticleForceGenerator.h" />
-    <ClInclude Include="ParticleForceRegistry.h" />
-    <ClInclude Include="ParticleGravity.h" />
-    <ClInclude Include="ParticleSpring.h" />
-    <ClInclude Include="Precision.h" />
+    <ClInclude Include="include\Contacts\NaiveParticleConctactGenerator.h" />
+    <ClInclude Include="include\Contacts\ParticleCable.h" />
+    <ClInclude Include="include\Contacts\ParticleConctactGenerator.h" />
+    <ClInclude Include="include\Contacts\ParticleContact.h" />
+    <ClInclude Include="include\Contacts\ParticleContactResolver.h" />
+    <ClInclude Include="include\Contacts\Particlelink.h" />
+    <ClInclude Include="include\Contacts\ParticleRod.h" />
+    <ClInclude Include="include\Contacts\WallContactGenerator.h" />
+    <ClInclude Include="include\Forces\ParticleAnchoredSpring.h" />
+    <ClInclude Include="include\Forces\ParticleBuoyancy.h" />
+    <ClInclude Include="include\Forces\ParticleDrag.h" />
+    <ClInclude Include="include\Forces\ParticleForceGenerator.h" />
+    <ClInclude Include="include\Forces\ParticleForceRegistry.h" />
+    <ClInclude Include="include\Forces\ParticleGravity.h" />
+    <ClInclude Include="include\Forces\ParticleSpring.h" />
+    <ClInclude Include="include\Particles\Particle.h" />
+    <ClInclude Include="include\Utils\MoteurUtils.h" />
+    <ClInclude Include="include\Utils\Precision.h" />
+    <ClInclude Include="include\Utils\Timing.h" />
+    <ClInclude Include="include\Vector3D\Vector3D.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_glfw.h" />
@@ -193,9 +205,6 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
-    <ClInclude Include="Particle.h" />
-    <ClInclude Include="Timing.h" />
-    <ClInclude Include="Vector3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
