--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
@@ -1,35 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_impl_glfw.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui_impl_opengl3.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Sources\Imgui</Filter>
-    </ClCompile>
     <ClCompile Include="Sources\Demos\ballistic.cpp">
       <Filter>Sources\Demos</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Particles\Particle.cpp">
       <Filter>Sources\Particles</Filter>
-    </ClCompile>
-    <ClCompile Include="Sources\Forces\ParticleAnchoredSpring.cpp">
-      <Filter>Sources\Forces</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Forces\ParticleBuoyancy.cpp">
       <Filter>Sources\Forces</Filter>
@@ -55,8 +31,50 @@
     <ClCompile Include="Sources\Vector3D\Vector3D.cpp">
       <Filter>Sources\Vector3D</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Main_rendu1.cpp">
       <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Main_rendu2.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\ParticleCable.cpp">
+      <Filter>Sources\Contacts</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicWorld.cpp">
+      <Filter>Sources\Demos</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\ParticleRod.cpp">
+      <Filter>Sources\Contacts</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\ParticleContact.cpp">
+      <Filter>Sources\Contacts</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\Particlelink.cpp">
+      <Filter>Sources\Contacts</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\ParticleContactResolver.cpp">
+      <Filter>Headers\Contacts</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_demo.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_draw.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_impl_glfw.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_impl_opengl3.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_tables.cpp">
+      <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\IMGUI\imgui_widgets.cpp">
+      <Filter>Sources\Imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -92,12 +110,6 @@
     </ClInclude>
     <ClInclude Include="include\Contacts\NaiveParticleConctactGenerator.h">
       <Filter>Headers\Contacts</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Particles\Particle.h">
-      <Filter>Headers\Particles</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Forces\ParticleAnchoredSpring.h">
-      <Filter>Headers\Forces</Filter>
     </ClInclude>
     <ClInclude Include="include\Forces\ParticleBuoyancy.h">
       <Filter>Headers\Forces</Filter>
@@ -146,6 +158,12 @@
     </ClInclude>
     <ClInclude Include="include\Vector3D\Vector3D.h">
       <Filter>Headers\Vector3D</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Particles\Particle.h">
+      <Filter>Headers\Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicWorld.h">
+      <Filter>Headers\Demos</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
