bug fix + implémentation de variables et fonctions de contact (à corriger)

--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="ParticleSpring.cpp">
       <Filter>Fichiers sources\OBJ\Forces</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleContact.cpp">
+      <Filter>Fichiers sources\OBJ\Contacts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
@@ -182,9 +185,6 @@
     <ClInclude Include="ParticleCable.h">
       <Filter>Fichiers d%27en-tête\OBJ\Contacts</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleConctactGenerator.h">
-      <Filter>Fichiers d%27en-tête\OBJ\Contacts</Filter>
-    </ClInclude>
     <ClInclude Include="ParticleContact.h">
       <Filter>Fichiers d%27en-tête\OBJ\Contacts</Filter>
     </ClInclude>
@@ -200,5 +200,16 @@
     <ClInclude Include="WallContactGenerator.h">
       <Filter>Fichiers d%27en-tête\OBJ\Contacts</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleContactGenerator.h">
+      <Filter>Fichiers d%27en-tête\OBJ\Contacts</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="moteur_physique.rc">
+      <Filter>Fichiers de ressources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
