particleCOntact & particleContactResolver avancés, particleContact attend la méthode de gestion de repos d'une particle. Les scripts des particleRod, wallContact ect sont à faire

--- a/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
+++ b/moteur_physique/moteur_physique/moteur_physique.vcxproj.filters
@@ -52,9 +52,6 @@
     <ClCompile Include="include\Contacts\Particlelink.cpp">
       <Filter>Sources\Contacts</Filter>
     </ClCompile>
-    <ClCompile Include="include\Contacts\ParticleContactResolver.cpp">
-      <Filter>Headers\Contacts</Filter>
-    </ClCompile>
     <ClCompile Include="Sources\IMGUI\imgui.cpp">
       <Filter>Sources\Imgui</Filter>
     </ClCompile>
@@ -75,6 +72,9 @@
     </ClCompile>
     <ClCompile Include="Sources\IMGUI\imgui_widgets.cpp">
       <Filter>Sources\Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Contacts\ParticleContactResolver.cpp">
+      <Filter>Sources\Contacts</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
